# desktop-vision-automation

./: .gitignore  LICENSE  README.md  grounding.py  main.py  pyproject.toml  requirements.txt  requirments.txt  run_demo.bat  utils.py  uv_configuration.txt
tjm-project/: post_1.txt  post_10.txt  post_2.txt  post_3.txt  post_4.txt  post_5.txt  post_6.txt  post_7.txt  post_8.txt  post_9.txt
